# n64.toys

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  compose.yaml  devenv.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
crates/web/: Cargo.toml
crates/web/src/: lib.rs
server/: Dockerfile  package.json  tsconfig.json
server/drizzle/: 0000_lonely_marvel_boy.sql  0001_dusty_blizzard.sql
server/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
server/scripts/: round-trip.mjs  round-trip.seed.sql
server/src/: app.test.ts  app.ts  auth-cli-lifecycle.test.ts  auth-cli-lifecycle.ts  auth-cli.ts  auth.test.ts  auth.ts  config.test.ts  config.ts  index.ts  shutdown.test.ts  shutdown.ts
server/src/db/: client.ts  migrate.ts  schema.test.ts  schema.ts  verify.test.ts  verify.ts
server/src/toys/: declarations.test.ts  declarations.ts  dto.test.ts  dto.ts  limits.test.ts  limits.ts  manifest.test.ts  manifest.ts  png.test.ts  png.ts  routes.test.ts  routes.ts  service.test.ts  service.ts  slug.test.ts  slug.ts  users-routes.test.ts  users-routes.ts
web-app/: index.html  package.json  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts
web-app/src/: App.ownership.test.ts  App.svelte  App.svelte.test.ts  app.css
web-app/src/lib/: BrowsePage.svelte  BrowsePage.svelte.test.ts  Diagnostics.svelte  Diagnostics.svelte.test.ts  Editor.svelte  EditorPage.svelte  EditorPage.svelte.test.ts  MyToys.svelte  MyToys.svelte.test.ts  PlayerBar.svelte  SaveControls.svelte  (+32 more)
(+22 files in other folders)
